# eletrifica_kids

./: Grid.py  README.md  answers.py  clues.py  fase1.py  fase3.py  grid.py  input_handler.py  main.py  main_funcionou_pq.py  prox_passos.txt  pyproject.toml  settings.py  tela_inicial.py
cruzadinha/: answers.py  clues.py  fase4.py  grid.py  input_handler.py  settings.py
eletroduto/: fase5.py  minigame_eletroduto.py
ligando_os_pontos/: minigame.py
