[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eletrifica-kids"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
    "ruff>=0.11.8",
]

# Adicionar esta seção:
[tool.setuptools]
packages = ["cruzadinha", "ligando_os_pontos"]